publish + subscribe transmission block